--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Administrador de Pacientes</title>
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -64,8 +65,7 @@
             </div>
         </div> <!--.row-->
     </div><!--.container-->
-
-    <script src="js/app.js" type="module"></script>
-
+    <script src="js/app.js"></script>
+    <script src="js/apv.js" type="module"></script>
 </body>
 </html>
